# cpp-lwevss

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindGMP.cmake  FindNTL.cmake
include/: algebra.hpp  bulletproof.hpp  constraints.hpp  merlin.hpp  pedersen.hpp  point25519.hpp  regevEnc.hpp  regevProofs.hpp  scalar25519.hpp  shamir.hpp  ternaryMatrix.hpp  tests.hpp  utils.hpp
include/libmerlin/: merlin.h
src/: main.cpp
src/25519/: curve25519.cpp
src/algebra/: foursquares.cpp  ternaryMatrix.cpp
src/dlproofs/: bulletproof.cpp  constraints.cpp  naive.cpp
src/libmerlin/: merlin.c
src/regev/: regevEnc.cpp  regevProofs-utils.cpp  regevProofs.cpp  ternaryMatrix.cpp
src/tools/: shamir.cpp
src/utils/: foursquares.cpp
tests/: CMakeLists.txt  test_algebra.cpp  test_bulletproof.cpp  test_constraint.cpp  test_foursquares.cpp  test_merlin.cpp  test_pedersen.cpp  test_point25519.cpp  test_regevEnc.cpp  test_regevProofs.cpp  test_scalar25519.cpp  test_shamir.cpp  test_ternaryMatrix.cpp
